--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "mathjs": "^12.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "statistics.js": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
